# cookiecutter-pypackage

./: 404.html  CNAME  CONTRIBUTING.rst  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: dev.yml
console_script_setup/: index.html
docs/: history.md  tutorial.md
faq/: index.html
history/: index.html
hooks/: post_gen_project.py
pypi_release_checklist/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  conftest.py  makefile  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py
