[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Dmitriy Efimov <daefimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DarkDemiurg/cookiecutter-pypackage"
documentation = "https://DarkDemiurg.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8.*"
cookiecutter = "1.7.3"

pytest = {version = "^7.1.2", optional=true}
pytest-cookies = {version = "^0.6.1", optional=true}
pyyaml = {version="^6.0.0",optional=true}
mkdocs = {version="^1.3.0",optional=true}
mkdocs-material = {version="^8.3.9",optional=true}
mkdocs-material-extensions = {version="^1.0.3",optional=true}
mkdocs-include-markdown-plugin = {version = "^3.5.2", optional=true}
pytest-cov = {version="^3.0.0",optional=true}
tox = {version = "^3.25.1", optional=true}
click = {version = "^8.1.3", optional = true}
charset-normalizer = "^2.1.0"

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "click"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
