[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.3.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Dmitriy Efimov <daefimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DarkDemiurg/cookiecutter-pypackage"
documentation = "https://DarkDemiurg.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8.*"
cookiecutter = "^2.5.0"

pytest = {version = "^7.1.2", optional=true}
pytest-cookies = {version = "^0.7.0", optional=true}
pyyaml = {version="^6.0.0",optional=true}
mkdocs = {version="^1.3.1",optional=true}
mkdocs-material = {version="^9.5.2",optional=true}
mkdocs-material-extensions = {version="^1.0.3",optional=true}
mkdocs-include-markdown-plugin = {version = "^6.0.4", optional=true}
pytest-cov = {version="^4.1.0",optional=true}
tox = {version = "^3.28.0", optional=true}
click = {version = "^8.1.3", optional = true}
charset-normalizer = "^3.3.2"

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "click"
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
